feat: sprint3 과제 답안 세팅